# cpp-game-project

./: CMakeLists.txt  README.md  build.sh  game-project.code-workspace
docs/: handbook.md
libs/GameCraft/include/juniorit/GameCraft/: Game.h  Scene.h  Sprite.h  Types.h  utils.h
libs/GameCraft/src/: Game.cpp  Scene.cpp  Sprite.cpp  utils.cpp
playground/: clean-source-code.cpp  countdown.cpp  file-mix-tabs.cpp  file-on-linux.cpp  file-on-windows.cpp  logs.cpp  simple-print.cpp  unformatted-code.cpp  uninitialized_variables.cpp
src/: FirstScene.cpp  FirstScene.h  main.cpp
web/: index.data  index.js
